fix(css): после внедрения карты не появлялся scrollbar для блока с техниками

--- a/source/scss/global.scss
+++ b/source/scss/global.scss
@@ -1,5 +1,6 @@
 html {
   box-sizing: border-box;
+  height: 100%;
 }
 
 *,
@@ -18,6 +19,7 @@ body {
   margin: 0;
   padding: 0;
   overflow: hidden;
+  height: 100%;
 }
 
 img {
